--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                 <img src="images/reciente.jpeg" alt="">
                 <div class="contenido">
                     <h3><a href="#">Viñuela</a></h3>
-                    <p>2 personas, 6Feb - 8Feb</p>
+                    <p>2 personas </p>
+                    <p>6Feb - 8Feb </p>
+                    <button class="ir">Ir a la casa</button>
                 </div>
             </article>
             
@@ -98,7 +100,9 @@
                 <img src="images/reciente.jpeg" alt="">
                 <div class="contenido">
                     <h3><a href="#">Casoplón</a></h3>
-                    <p>2 personas, 6Feb - 8Feb</p>
+                    <p>2 personas </p>
+                    <p>6Feb - 8Feb </p>
+                    <button class="ir">Ir a la casa</button>
                 </div>
             </article>
         </section>
