--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
                     <button class="ir">Ir a la casa</button>
                 </div>
             </article>
-            
             <article class="mostrarReciente">
                 <img src="images/reciente.jpeg" alt="">
                 <div class="contenido">
@@ -107,138 +106,65 @@
             </article>
         </section>
 
-
-
-
-
         <h3>Anuncios</h3>
         <section class="anuncios">
-            <a href="#">
-                <article class="anuncio">
-                    <img src="images/anuncio1.jpg" alt="">
-                    <div class="contenido">
-                        <h3 class="anuncioTitle">Casa Manolete - 250€/Noche</h2>
-                            <p>Viñuela, Málaga</p>
-                            <div>
-                                <label for="rating">Calificación:</label>
-                                <select id="rating">
-                                    <option value="1">1 estrella</option>
-                                    <option value="2">2 estrellas</option>
-                                    <option value="3">3 estrellas</option>
-                                    <option value="4">4 estrellas</option>
-                                    <option value="5">5 estrellas</option>
-                                </select>
-                            </div>
+            <article class="anuncio">
+                <img src="images/anuncio1.jpg" alt="">
+                <div class="contenido">
+                    <h3 class="anuncioTitle"><a href="#">Casa Manolete <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
+                        <p>80€/noche</p>
+                        <p>Viñuela, Málaga</p>
+                        <button class="disponibilidad">Ver Disponibilidad</button>
+                </div>
+            </article>
 
-                            <button class="disponibilidad">Ver Disponibilidad</button>
-                    </div>
-                </article>
-            </a>
-            <a href="#">
-                <article class="anuncio">
-                    <img src="images/anuncio2.jpg" alt="">
-                    <div class="contenido">
-                        <h3 class="anuncioTitle">Casa Antoñete - 150€/Noche</h2>
-                            <p>Viñuela, Málaga</p>
-                            <div class="rating">
-                                <label for="rating">Calificación:</label>
-                                <select id="rating">
-                                    <option value="1">1 estrella</option>
-                                    <option value="2">2 estrellas</option>
-                                    <option value="3">3 estrellas</option>
-                                    <option value="4">4 estrellas</option>
-                                    <option value="5">5 estrellas</option>
-                                </select>
-                            </div>
+            <article class="anuncio">
+                <img src="images/anuncio2.jpg" alt="">
+                <div class="contenido">
+                    <h3 class="anuncioTitle"><a href="#">Casa Antoñete <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
+                        <p>60€/noche</p>
+                        <p>Viñuela, Málaga</p>
+                        <button class="disponibilidad">Ver Disponibilidad</button>
+                </div>
+            </article>
 
-                            <button class="disponibilidad">Ver Disponibilidad</button>
-                    </div>
-                </article>
-            </a>
-            <a href="#">
-                <article class="anuncio">
-                    <img src="images/anuncio3.jpg" alt="">
-                    <div class="contenido">
-                        <h3 class="anuncioTitle">Casa Joselu - 700€/Noche</h2>
-                            <p>Viñuela, Málaga</p>
-                            <div class="rating">
-                                <label for="rating">Calificación:</label>
-                                <select id="rating">
-                                    <option value="1">1 estrella</option>
-                                    <option value="2">2 estrellas</option>
-                                    <option value="3">3 estrellas</option>
-                                    <option value="4">4 estrellas</option>
-                                    <option value="5">5 estrellas</option>
-                                </select>
-                            </div>
+            <article class="anuncio">
+                <img src="images/anuncio3.jpg" alt="">
+                <div class="contenido">
+                    <h3 class="anuncioTitle"><a href="#">Casa Joselu <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
+                        <p>100€/noche</p>
+                        <p>Viñuela, Málaga</p>
+                        <button class="disponibilidad">Ver Disponibilidad</button>
+                </div>
+            </article>
 
-                            <button class="disponibilidad">Ver Disponibilidad</button>
-                    </div>
-                </article>
-            </a>
-            <a href="#">
-                <article class="anuncio">
-                    <img src="images/anuncio4.jpg" alt="">
-                    <div class="contenido">
-                        <h3 class="anuncioTitle">Caserío Borja - 500€/Noche</h2>
-                            <p>Viñuela, Málaga</p>
-                            <div class="rating">
-                                <label for="rating">Calificación:</label>
-                                <select id="rating">
-                                    <option value="1">1 estrella</option>
-                                    <option value="2">2 estrellas</option>
-                                    <option value="3">3 estrellas</option>
-                                    <option value="4">4 estrellas</option>
-                                    <option value="5">5 estrellas</option>
-                                </select>
-                            </div>
-
-                            <button class="disponibilidad">Ver Disponibilidad</button>
-                    </div>
-                </article>
-            </a>
-            <a href="#">
-                <article class="anuncio">
-                    <img src="images/anuncio5.jpg" alt="">
-                    <div class="contenido">
-                        <h3 class="anuncioTitle">Casa Mal Estado - 10€/Noche</h2>
-                            <p>Viñuela, Málaga</p>
-                            <div class="rating">
-                                <label for="rating">Calificación:</label>
-                                <select id="rating">
-                                    <option value="1">1 estrella</option>
-                                    <option value="2">2 estrellas</option>
-                                    <option value="3">3 estrellas</option>
-                                    <option value="4">4 estrellas</option>
-                                    <option value="5">5 estrellas</option>
-                                </select>
-                            </div>
-
-                            <button class="disponibilidad">Ver Disponibilidad</button>
-                    </div>
-                </article>
-            </a>
-            <a href="#">
-                <article class="anuncio">
-                    <img src="images/anuncio6.jpg" alt="">
-                    <div class="contenido">
-                        <h3 class="anuncioTitle">Casa Victor - 250€/Noche</h2>
-                            <p>Viñuela, Málaga</p>
-                            <div class="rating">
-                                <label for="rating">Calificación:</label>
-                                <select id="rating">
-                                    <option value="1">1 estrella</option>
-                                    <option value="2">2 estrellas</option>
-                                    <option value="3">3 estrellas</option>
-                                    <option value="4">4 estrellas</option>
-                                    <option value="5">5 estrellas</option>
-                                </select>
-                            </div>
-
-                            <button class="disponibilidad">Ver Disponibilidad</button>
-                    </div>
-                </article>
-            </a>
+            <article class="anuncio">
+                <img src="images/anuncio4.jpg" alt="">
+                <div class="contenido">
+                    <h3 class="anuncioTitle"><a href="#">Caserío Borja <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
+                        <p>85€/noche</p>
+                        <p>Viñuela, Málaga</p>
+                        <button class="disponibilidad">Ver Disponibilidad</button>
+                </div>
+            </article>
+            <article class="anuncio">
+                <img src="images/anuncio5.jpg" alt="">
+                <div class="contenido">
+                    <h3 class="anuncioTitle"><a href="#">Casa Mal Estado <i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
+                        <p>5€/noche</p>
+                        <p>Viñuela, Málaga</p>
+                        <button class="disponibilidad">Ver Disponibilidad</button>
+                </div>
+            </article>
+            <article class="anuncio">
+                <img src="images/anuncio6.jpg" alt="">
+                <div class="contenido">
+                    <h3 class="anuncioTitle"><a href="#">Casa Victor <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
+                        <p>30€/noche</p>
+                        <p>Viñuela, Málaga</p>
+                        <button class="disponibilidad">Ver Disponibilidad</button>
+                </div>
+            </article>
         </section>
     </main>
 
