--- a/index.html
+++ b/index.html
@@ -111,19 +111,29 @@
             <article class="anuncio">
                 <img src="images/anuncio1.jpg" alt="">
                 <div class="contenido">
-                    <h3 class="anuncioTitle"><a href="#">Casa Manolete <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
-                        <p>80€/noche</p>
-                        <p>Viñuela, Málaga</p>
-                        <button class="disponibilidad">Ver Disponibilidad</button>
+                    <h3 class="anuncioTitle">
+                        <a href="#">Casa Manolete 
+                            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        </a>
+                    </h3>
+                    <p>80€/noche</p>
+                    <p class="Location">
+                        <a href="https://www.google.es/maps/place/29712+Vi%C3%B1uela,+M%C3%A1laga/@36.8643638,-4.1442379,17z/data=!3m1!4b1!4m6!3m5!1s0xd7241f2718864dd:0xe30b1f7cdc22d52c!8m2!3d36.8630324!4d-4.1414604!16s%2Fm%2F0crj7x7?entry=ttu">Viñuela, Málaga</a>
+                    </p>
+                </div>                
+                <div class="boton-contenedor">
+                    <button class="disponibilidad">Ver Disponibilidad</button>
                 </div>
             </article>
-
+            
             <article class="anuncio">
                 <img src="images/anuncio2.jpg" alt="">
                 <div class="contenido">
                     <h3 class="anuncioTitle"><a href="#">Casa Antoñete <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
                         <p>60€/noche</p>
-                        <p>Viñuela, Málaga</p>
+                        <p class="Location"><a href="https://www.google.es/maps/place/29712+Vi%C3%B1uela,+M%C3%A1laga/@36.8643638,-4.1442379,17z/data=!3m1!4b1!4m6!3m5!1s0xd7241f2718864dd:0xe30b1f7cdc22d52c!8m2!3d36.8630324!4d-4.1414604!16s%2Fm%2F0crj7x7?entry=ttu">Viñuela, Málaga</a></p>
                         <button class="disponibilidad">Ver Disponibilidad</button>
                 </div>
             </article>
@@ -133,7 +143,7 @@
                 <div class="contenido">
                     <h3 class="anuncioTitle"><a href="#">Casa Joselu <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
                         <p>100€/noche</p>
-                        <p>Viñuela, Málaga</p>
+                        <p class="Location"><a href="https://www.google.es/maps/place/29712+Vi%C3%B1uela,+M%C3%A1laga/@36.8643638,-4.1442379,17z/data=!3m1!4b1!4m6!3m5!1s0xd7241f2718864dd:0xe30b1f7cdc22d52c!8m2!3d36.8630324!4d-4.1414604!16s%2Fm%2F0crj7x7?entry=ttu">Viñuela, Málaga</a></p>
                         <button class="disponibilidad">Ver Disponibilidad</button>
                 </div>
             </article>
@@ -143,7 +153,7 @@
                 <div class="contenido">
                     <h3 class="anuncioTitle"><a href="#">Caserío Borja <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
                         <p>85€/noche</p>
-                        <p>Viñuela, Málaga</p>
+                        <p class="Location"><a href="https://www.google.es/maps/place/29712+Vi%C3%B1uela,+M%C3%A1laga/@36.8643638,-4.1442379,17z/data=!3m1!4b1!4m6!3m5!1s0xd7241f2718864dd:0xe30b1f7cdc22d52c!8m2!3d36.8630324!4d-4.1414604!16s%2Fm%2F0crj7x7?entry=ttu">Viñuela, Málaga</a></p>
                         <button class="disponibilidad">Ver Disponibilidad</button>
                 </div>
             </article>
@@ -152,7 +162,7 @@
                 <div class="contenido">
                     <h3 class="anuncioTitle"><a href="#">Casa Mal Estado <i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
                         <p>5€/noche</p>
-                        <p>Viñuela, Málaga</p>
+                        <p class="Location"><a href="https://www.google.es/maps/place/29712+Vi%C3%B1uela,+M%C3%A1laga/@36.8643638,-4.1442379,17z/data=!3m1!4b1!4m6!3m5!1s0xd7241f2718864dd:0xe30b1f7cdc22d52c!8m2!3d36.8630324!4d-4.1414604!16s%2Fm%2F0crj7x7?entry=ttu">Viñuela, Málaga</a></p>
                         <button class="disponibilidad">Ver Disponibilidad</button>
                 </div>
             </article>
@@ -161,7 +171,7 @@
                 <div class="contenido">
                     <h3 class="anuncioTitle"><a href="#">Casa Victor <i class="fa-solid fa-star" style="color: #FFD43B;"></i><i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></h2>
                         <p>30€/noche</p>
-                        <p>Viñuela, Málaga</p>
+                        <p class="Location"><a href="https://www.google.es/maps/place/29712+Vi%C3%B1uela,+M%C3%A1laga/@36.8643638,-4.1442379,17z/data=!3m1!4b1!4m6!3m5!1s0xd7241f2718864dd:0xe30b1f7cdc22d52c!8m2!3d36.8630324!4d-4.1414604!16s%2Fm%2F0crj7x7?entry=ttu">Viñuela, Málaga</a></p>
                         <button class="disponibilidad">Ver Disponibilidad</button>
                 </div>
             </article>
