--- a/mostrarcasa.html
+++ b/mostrarcasa.html
@@ -63,7 +63,7 @@
             <li><i class="fas fa-bed"></i> Habitaciones acogedoras</li>
             <li><i class="fas fa-bath"></i> Baños privados</li>
             <li><i class="fas fa-utensils"></i> Comedor con cocina equipada</li>
-            <li><i class="fas fa-fireplace"></i> Chimenea para noches acogedoras</li>
+            <li><i class="fa-solid fa-house-chimney"></i> Chimenea para noches acogedoras</li>
             <li><i class="fas fa-wifi"></i> Conexión Wi-Fi gratuita</li>
             <li><i class="fas fa-parking"></i> Aparcamiento privado</li>
             <li><i class="fas fa-tree"></i> Entorno natural y tranquilo</li>
