--- a/mostrarcasa.html
+++ b/mostrarcasa.html
@@ -43,13 +43,12 @@
 
     <div class="contenido">
         <h2>Casa Manolete</h2>
+        <h3 class="precio">Precio por noche: 150€</h3>
         <img src="images/casamanolete.jpg" alt="">
         <div class="minimgs">
             <img class="efecto" src="images/casamanolete.jpg" alt="">
             <img class="efecto" src="images/casamanolete1.jpg" alt="">
         </div>
-        <p class="precio">Precio por noche: 150€</p>
-
     </div>
 
     <div class="descripcion">
